# tiny-llama3

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-tests.yaml
docs/: .gitignore  conf.py  index.md  usage.md
notebooks/: analyze_embeddings_pca.ipynb  initial.ipynb  run-llama3-hf.ipynb
notebooks/data/: .gitignore
src/tiny_llama3/: __init__.py  __main__.py  app.py
tests/tiny_llama3/: test_sample.py
