[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tiny-llama3"
version = "0.0.1"
description = "tiny llama3-like built from scratch"
authors = ["Vincent Pfister <vincent@famille-pfister.net>"]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vpfister/tiny-llama3"
repository = "https://github.com/vpfister/tiny-llama3"
documentation = "https://github.com/vpfister/tiny-llama3/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Environment :: Console",
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/vpfister/tiny-llama3/issues"

[tool.poetry.scripts]
tiny-llama3 = "tiny_llama3.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10.0"
click = "*"
jupyterlab = "*"
pandas = "*"
jupyterlab_git = "*"
jupyterlab_widgets = "*"
tiktoken = "^0.7.0"
torch = "^2.3.1"
numpy = ">=1.17"
matplotlib = "^3.9.0"
tables = "^3.9.2"
blobfile = "^2.1.1"
transformers = "^4.42.0"
ipywidgets = "^8.1.3"
accelerate = "^0.31.0"
bitsandbytes = "^0.43.1"
torchtune = "^0.1.1"
packaging = "^24.1"
peft = "^0.11.1"
trl = "^0.9.4"
datasets = "^2.20.0"
wandb = "^0.17.3"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.0"
cython = "^3.0.10"
h5py = "^3.11.0"
jupyter-contrib-nbextensions = "^0.7.0"

[tool.poetry.group.test.dependencies]
bandit = "*"
black = "*"
bump2version = "*"
flake8 = "*"
isort = "*"
jedi-language-server = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
reorder-python-imports = "*"
vulture = "*"
typeguard = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pyupgrade = "*"
darglint = "*"
pyinstaller = "*"

[tool.poetry.group.docs.dependencies]
furo = "*"
myst_parser = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-click = "*"


[tool.poetry.group.dev.dependencies]
ipytest = "^0.14.2"
catppuccin-jupyterlab = "^0.2.2"
jupyterlab-lsp = "^5.1.0"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py311']

[tool.ruff]
select = ["ALL"]
lines-after-imports = 2
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.bandit]
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
# Example
filterwarnings = [
    "ignore::DeprecationWarning:moto.*:",
    "ignore::DeprecationWarning:boto.*:",
]
